--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
       <version>3.1.0</version>
       <scope>provided</scope>
   </dependency>
+  <dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>jquery</artifactId>
+    <version>3.6.0</version>
+</dependency>
   </dependencies>
   
 
